section_4/code/cd_pipeline/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: hands-on-jenkins-app
  labels: 
    name: hands-on-jenkins-app
