section_4/code/cd_pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dror-andal-dev
  namespace: hands-on-jenkins-app
  labels:
    app: dror-andal
    env: dev
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: dror-andal
    env: dev
