section_4/code/cd_pipeline/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hands-on-jenkins-app-dev
  namespace: hands-on-jenkins-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hands-on-jenkins-app.prod.stavco9.com
    secretName: hands-on-jenkins-app-tls
  rules:
  - host: hands-on-jenkins-app.dev.stavco9.com
    http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: hands-on-jenkins-app-dev
          servicePort: 5000
